myChart/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-health-csharp

  labels:
    run: app-health-csharp

spec:
  ports:
  - port: 80
    protocol: TCP
  selector:
    run: app-health-csharp
