myChart/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-app-health-csharp
  annotations:
    # use the shared ingress-nginx
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: chart-example.local #app-health-csharp.apps.play.gepaplexx.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app-health-csharp
            port:
              number: 8080
